# zsync-curl

./: .gitignore  CMakeLists.txt
doc/: CMakeLists.txt
librcksum/: CMakeLists.txt
libzsync/: CMakeLists.txt
src/: config.h.in  http.c
zlib/: CMakeLists.txt
